--- a/style.css
+++ b/style.css
@@ -115,4 +115,19 @@ hr {
 .footer {
   margin-top: 60px;
   font-size: 12px;
-  color: #737
+  color: #737373;
+  text-align: center;
+  padding: 20px 10px;
+}
+
+.languages, .links {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 8px;
+  margin: 5px 0;
+}
+
+.meta-copy {
+  margin-top: 10px;
+}
