--- a/public/ug-style.css
+++ b/public/ug-style.css
@@ -6,11 +6,12 @@ body, html {
   height: 100%;
 }
 .background {
-  background: url("https://ug.edu.pl/sites/default/files/styles/width1600/public/images/news/2023/08/uniwersytet_gdanski_panorama.jpg") no-repeat center center/cover;
-  min-height: 100vh;
+  background: url('ug-background.jpg') no-repeat center center fixed;
+  background-size: cover;
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100%;
 }
 .login-box {
   background-color: white;
