--- a/public/ug-style.css
+++ b/public/ug-style.css
@@ -6,7 +6,7 @@ html, body {
 }
 
 .background {
-  background: url('https://mors.ug.edu.pl/sites/default/files/_nodes/news/64336/images/ug1.jpg') no-repeat center center fixed;
+  background: url('https://i.ibb.co/VWtY9PZN/Instagram-Facebook-Ads-last-chance-1080x1080px.png') no-repeat center center fixed;
   background-size: cover;
   display: flex;
   justify-content: center;
