--- a/public/style.css
+++ b/public/style.css
@@ -254,14 +254,18 @@ a {
 }
 
 .al-button {
-  margin-top: 16px;
-  padding: 10px 20px;
-  font-size: 16px;
-  border-radius: 4px;
+  width: 100%;
+  max-width: 100%;
+  padding: 1rem;
+  background-color: var(--color-button-disabled);
+  color: #fff;
+  font-weight: bold;
   border: none;
-  background-color: #ccc;
-  cursor: not-allowed;
-  transition: background-color 0.2s;
+  border-radius: 20px;
+  font-size: 1rem;
+  cursor: allowed;
+  transition: background-color 0.25s ease, transform 0.1s ease;
+  margin-bottom: 3rem;
 }
 .al-button__label {
  padding: 10px 20px;
@@ -273,22 +277,6 @@ a {
   background-color: #007bff;
   color: white;
   cursor: pointer;
-}
-
-/* Кнопка — уже и плавнее */
-.al-button button {
-  width: 100%;
-  max-width: 100%;
-  padding: 1rem;
-  background-color: var(--color-button-disabled);
-  color: #fff;
-  font-weight: bold;
-  border: none;
-  border-radius: 20px;
-  font-size: 1rem;
-  cursor: not-allowed;
-  transition: background-color 0.25s ease, transform 0.1s ease;
-  margin-bottom: 3rem;
 }
 
 /* При ховере неактивной — цвет чуть темнее с коричневым оттенком */
